feat: reworked entity spawn